--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <div class="MenuToggle">
         <div>
-          <input type="checkbox" checked />
+          <input type="checkbox" />
           <span></span>
           <span></span>
           <span></span>
