--- a/pages/Info.html
+++ b/pages/Info.html
@@ -19,41 +19,23 @@
             <li><a href="../pages/Info.html">Info</a></li>
             <li><a href="../pages/Price.html">Price</a></li>
             <li><a href="../pages/Contact.html">Contact</a></li>
-            <li>
-              <div class="menu">
-                <div class="item">
-                  <a href="#" class="link">
-                    <p>Languages</p>
-                    <svg viewBox="0 0 360 360" xml:space="preserve">
-                      <g id="SVGRepo_iconCarrier">
-                        <path
-                          id="XMLID_225_"
-                          d="M325.607,79.393c-5.857-5.857-15.355-5.858-21.213,0.001l-139.39,139.393L25.607,79.393 c-5.857-5.857-15.355-5.858-21.213,0.001c-5.858,5.858-5.858,15.355,0,21.213l150.004,150c2.813,2.813,6.628,4.393,10.606,4.393 s7.794-1.581,10.606-4.394l149.996-150C331.465,94.749,331.465,85.251,325.607,79.393z"></path>
-                      </g>
-                    </svg>
-                  </a>
-                  <div class="submenu">
-                    <div class="submenu-item">
-                      <a href="#" class="submenu-link" data-lang="en">
-                        English
-                      </a>
-                    </div>
-                    <div class="submenu-item">
-                      <a href="#" class="submenu-link" data-lang="cs">
-                        Czech
-                      </a>
-                    </div>
-                    <div class="submenu-item">
-                      <a href="#" class="submenu-link" data-lang="uk">
-                        Ukrainian
-                      </a>
-                    </div>
-                    <div class="submenu-item">
-                      <a href="#" class="submenu-link" data-lang="ru">
-                        Russian
-                      </a>
-                    </div>
-                  </div>
+           <li class="languages-menu">
+              <button class="link" popovertarget="content">Languages</button>
+              <div class="submenu" id="content" popover>
+                <button class="close_btn" popovertarget="content">
+                  &times;
+                </button>
+                <div class="submenu-item">
+                  <a href="#" class="submenu-link" data-lang="en">English</a>
+                </div>
+                <div class="submenu-item">
+                  <a href="#" class="submenu-link" data-lang="cs">Czech</a>
+                </div>
+                <div class="submenu-item">
+                  <a href="#" class="submenu-link" data-lang="uk">Ukrainian</a>
+                </div>
+                <div class="submenu-item">
+                  <a href="#" class="submenu-link" data-lang="ru">Russian</a>
                 </div>
               </div>
             </li>
