--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -123,7 +123,7 @@
             </div>
             <div>
               <img src="../assets/Icon (1).png" alt="Email icon" />
-              <span>666161690@mail.ru</span>
+              <span>larinapixel@gmail.com</span>
             </div>
           </article>
 
